--- a/my_pub.bib
+++ b/my_pub.bib
@@ -1,10 +1,3 @@
-@inproceedings{ardywibowo2020nads,
-  title={NADS: Neural Architecture Distribution Search for Uncertainty Awareness},
-  author={Ardywibowo, Randy and Boluki, Shahin and Gong, Xinyu and Wang, Zhangyang and Qian, Xiaoning},
-  booktitle={arXiv preprint arXiv:2006.06646},
-  year={2020}
-}
-
 
 @article{zhang2018multitarget,
  author = {Zhang, Dongheng and He, Ying and Gong, Xinyu and Hu, Yang and Chen, Yan and Zeng, Bing},
@@ -27,7 +20,7 @@
 
 @article{jiang2019enlightengan,
  author = {Jiang, Yifan and Gong, Xinyu and Liu, Ding and Cheng, Yu and Fang, Chen and Shen, Xiaohui and Yang, Jianchao and Zhou, Pan and Wang, Zhangyang},
- journal = {arXiv preprint arXiv:1906.06972},
+ journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
  title = {EnlightenGAN: Deep Light Enhancement without Paired Supervision},
  year = {2019}
 }
@@ -56,5 +49,30 @@
  year = {2019}
 }
 
+@inproceedings{ardywibowo2020nads,
+  title={NADS: Neural Architecture Distribution Search for Uncertainty Awareness},
+  author={Ardywibowo, Randy and Boluki, Shahin and Gong, Xinyu and Wang, Zhangyang and Qian, Xiaoning},
+  booktitle={arXiv preprint arXiv:2006.06646},
+  year={2020}
+}
 
+@article{gong2020autopose,
+  title={Autopose: Searching multi-scale branch aggregation for pose estimation},
+  author={Gong, Xinyu and Chen, Wuyang and Jiang, Yifan and Yuan, Ye and Liu, Xianming and Zhang, Qian and Li, Yuan and Wang, Zhangyang},
+  journal={arXiv preprint arXiv:2008.07018},
+  year={2020}
+}
 
+@article{gong2021sandwich,
+  title={Sandwich Batch Normalization},
+  author={Gong, Xinyu and Chen, Wuyang and Chen, Tianlong and Wang, Zhangyang},
+  journal={arXiv preprint arXiv:2102.11382},
+  year={2021}
+}
+
+@article{chen2021neural,
+  title={Neural architecture search on imagenet in four gpu hours: A theoretically inspired perspective},
+  author={Chen, Wuyang and Gong, Xinyu and Wang, Zhangyang},
+  journal={International Conference on Learning Representations (ICLR)},
+  year={2021}
+}
